@@ -39,6 +39,7 @@
     <project.build.outputTimestamp>2025-09-10T20:39:14Z</project.build.outputTimestamp>
 
     <excludeTestCompilation>**/Java17*</excludeTestCompilation>
+    <skipJavaTimeTest>false</skipJavaTimeTest>
   </properties>
 
   <dependencies>
@@ -179,6 +180,23 @@
             configuration locally). -->
           <argLine>--illegal-access=deny</argLine>
         </configuration>
+        <executions>
+          <!-- Additionally run `JavaTimeTest` with the `java.time` package open for reflection, to ensure backward
+            compatibility with previous reflection-based serialization -->
+          <execution>
+            <id>java-time-test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <phase>test</phase>
+            <configuration>
+              <skipTests>${skipJavaTimeTest}</skipTests>
+              <argLine>--add-opens java.base/java.time=ALL-UNNAMED</argLine>
+              <test>JavaTimeTest</test>
+              <failIfNoTests>true</failIfNoTests>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <!-- Failsafe plugin for running integration tests against final JAR, see `*IT.java` test classes -->
       <plugin>
@@ -392,6 +410,7 @@
     <profile>
       <id>gson-subset</id>
       <properties>
+        <skipJavaTimeTest>true</skipJavaTimeTest>
         <gsonSubsetSrcDir>${project.build.directory}/gson-subset-src</gsonSubsetSrcDir>
       </properties>
       <build>
